--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Git Tutorial</title>
 </head>
 <body>
-    Lockhead Martin    
+    Lockhead Martin  
+    General Dynamics  
 </body>
 </html>
